# drvoss_rag_maker_chonkie

./: README.md  main.py  pyproject.toml
comp_tests/: RAG.ipynb  RAG_model2vec.ipynb  async_jup.ipynb  chunk_treat_v2.ipynb  describe_image.ipynb  describe_images.ipynb  pdf_images_single_table.db  try_maker.ipynb  voyage_emb.ipynb
data/: answers_dict.json  dr_voss_md.md  dr_voss_txt.txt  unit_qa.json  unit_qa_harder_questions.json
scripts/: RAG.py  chunk_script.ipynb  chunk_treat.ipynb  chunk_treat_v2.ipynb  create_chunk_embeddings.py  describe_images.ipynb  describe_images.py  eval.ipynb  try_maker.py  unit_questions_answers.py
scripts/.ipynb_checkpoints/: try_maker-checkpoint.ipynb
src/: classe_gemini.py  interact_database_sql.py  model2vec_emb.py  retrieve_img.ipynb  retrieve_img.py  voyage_emb.py
