[project]
name = "drvossv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chonkie[all]>=1.0.7",
    "google-generativeai>=0.8.5",
    "hf-xet>=1.1.4",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "marker-pdf>=1.7.3",
    "model2vec>=0.5.0",
    "pillow>=10.4.0",
    "rerankers>=0.10.0",
    "streamlit>=1.45.1",
    "streamlit-ace>=0.1.1",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = []
